--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-API_KEY="499DLIMQWQUP8W7Z"
+# API_KEY="499DLIMQWQUP8W7Z"
+API_KEY="AOQLEZTI5KW4XBGQ"
 PORT="5000"
 MONGO_URI="mongodb+srv://bhawarkar24:FPnXXxGL0GuD9cS3@cluster0.ze739bo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
